SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

When a Session tab is renamed the rename dialog's text box now contains the old name.
  Thanks to Chris B for the code.

New toolbar button on the upper right of an SQL result tab: 'Mark duplicate values in columns'
  The mark's brightness alters between succeeding non unique values.

Two new right mouse menus on result tables: 'Color selected rows' and 'Go to color'.

New right mouse menu entries on SQL result tabs: 'close all to left' and 'close all to right'

Added JSON to export formats. See right mouse menu on tables or tools popup (ctrl+t) on SQLs.

Added SAS default driver definition.
 Thanks to Luca Vercelli

Aliases can be colored. This feature for example can be used to mark important Aliases.

Cell data popup dialog --> Browse button now remembers last directory.

Reworked corrections/abbreviations dialog. See Session toolbar button 'Configure auto correct /abreviation'.

#438 The 'Run query output to a file'-feature does now respect the 'Abort on error ...'-property.
  See menu File --> New Session Properties --> tab SQL

#566 Simplified launch scripts by using wildcards to build the classpath.
  This was done for the SQuirreL application and CLI launch scripts.

#438 Run query output to a file by defining the file as part of the SQL statement
  Example:
    @file '/tmp/customers.xlsx' SELECT * FROM customers
  will write the result of 'SELECT * FROM customers' to '/tmp/customers.xlsx'
  The settings for the output will be taken from the 'Store result of SQL to file' dialog.
  Please note the single quotes around the file name.

Allowed Java version 10 in starter scripts.

New right mouse menu entry 'Copy selected rows to new window' available in all tables.