@@ -1,3 +1,4 @@
 sql12/output
+sql12/versionChecker/output
 sql12/.classpath
 sql12/.project
