@@ -1,3 +1,0 @@
-versioncheck.jar is included in core/lib/
-
-For information on how to build versioncheck.jar look at the versioncheck-source file JavaVersionChecker.java
